# Fyrox-visual-programing

./: CHANGES_SUMMARY.md  COLOR_REFERENCE.md  Cargo.toml  DOCUMENTATION_INDEX.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS_SUMMARY.md  README_UI_IMPROVEMENTS.md  ROADMAP_VISUAL_SCRIPTING.md  Running.md  START_HERE.md  UI_STYLING_GUIDE.md  VISUAL_IMPROVEMENTS_COMPLETE.md  VISUAL_SCRIPTING_BUILD_PLAN.md
data/: unnamed_resource.blueprint
data/bluepijt/: Blueprint_1.blueprint  Blueprint_1.rgs  unnamed.rgs
editor/: Cargo.toml
editor/src/: lib.rs  message.rs
editor/src/asset/: item.rs  mod.rs
editor/src/plugins/: mod.rs
editor/src/plugins/absm/: canvas.rs  connection.rs  mod.rs  node.rs  node_v2.rs  socket.rs  socket_v2.rs
editor/src/scene/: mod.rs  selector.rs
editor/src/world/: graph.rs
executor/: Cargo.toml
executor/src/: main.rs
fyrox-blueprint/: Cargo.toml
fyrox-blueprint/src/: lib.rs  resource.rs  screen_log.rs
fyrox-graph/src/: lib.rs
fyrox-visual-scripting/: Cargo.toml
fyrox-visual-scripting/src/: compile.rs  error.rs  interpret.rs  lib.rs  model.rs
fyrox-visual-scripting/src/nodes/: base.rs  begin_play.rs  branch.rs  construction_script.rs  events.rs  flow_control.rs  get_actor_by_name.rs  get_actor_name.rs  get_actor_transform.rs  get_variable.rs  mod.rs  print.rs  rhai_script.rs  self_node.rs  set_actor_transform.rs  set_variable.rs  spawn_actor.rs  tick.rs  utilities.rs  variables.rs  world.rs
fyrox-visual-scripting/src/runtime/: branch.rs  mod.rs  passthrough.rs  print.rs  rhai_script.rs  set_variable.rs
(+2 files in other folders)
