[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { path = "../fyrox", features = ["default"] }
fyrox-blueprint = { path = "../fyrox-blueprint" }

[features]
default = []
# Kept for compatibility with editor build profiles (`settings.ron`).
dylib = ["fyrox/dylib"]

